# bestcard

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/cards/: sample_cards.json
docs/: architecture.md  workflow.md
scripts/: ingest_policies.py  run_bot.py
src/bestcard/: config.py
src/bestcard/agents/: __init__.py  orchestrator.py
src/bestcard/api/: app.py
src/bestcard/api/routes/: recommend.py
src/bestcard/domain/: __init__.py  models.py
src/bestcard/engine/: __init__.py  evaluator.py  selectors.py
src/bestcard/integrations/: telegram_bot.py
src/bestcard/nlp/: __init__.py  parser.py
src/bestcard/rag/: __init__.py  ingest.py  retriever.py
src/bestcard/repository/: __init__.py  policy_store.py
src/bestcard/schemas/: __init__.py  requests.py  responses.py
tests/: t_engine.py  t_full_flow.py  test_engine.py
tests/bestcard/nlp/: t_parser.py
